test/domains/compilerErrors/constDomain6.chpl
const d: domain(int) = { 1, 5 ,6, 7};
d.remove(5);
