test/domains/compilerErrors/constDomain6.good
constDomain6.chpl:2: error: const actual is passed to 'ref' formal 'this' of remove()
note: to formal of type DefaultAssociativeDom(int(64),true)
